--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,19 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
+      .w3-sidebar a {font-family: "Roboto", sans-serif}
+      body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
+      </style>
+      <header className="w3-bar w3-top w3-hide-large w3-black w3-xlarge">
+        <div className="w3-bar-item w3-padding-24 w3-wide"></div>
+        <a href="javascript:void(0)" className="w3-bar-item w3-button w3-padding-24 w3-right" onClick="w3_open()"><i className="fa fa-bars"></i></a>
+      </header>
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -26,7 +39,10 @@
     -->
     <title>The Container Shop</title>
   </head>
-  <body>
+  <body className="w3-content" style="max-width:1200px">
+    <div clasName="w3-overlay w3-hide-large" onClick="w3_close()" title="close side menu" id="myOverlay"></div>
+    <div className="w3-main" style="margin-left:250px">
+    <div className="w3-hide-large" style="margin-top:83px"></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
