--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,26 @@
       .w3-sidebar a {font-family: "Roboto", sans-serif}
       body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
       </style>
-      <header className="w3-bar w3-top w3-hide-large w3-black w3-xlarge">
+      <style>
+        .header {
+          background-color: antiquewhite;
+          text-align: center;
+          border: solid rgb(198, 195, 195);
+          width: 111rem;
+          height: 20rem;
+          margin-bottom: -50px;
+          padding: 60px;
+          color: black;
+        }
+      </style>
+      <div class="header">
+        <h1>The Container Shop</h1>
+        <h3>For all your collectable needs!</h3>
+      </div>
+      <!-- <header className="w3-bar w3-top w3-hide-large w3-black w3-xlarge">
         <div className="w3-bar-item w3-padding-24 w3-wide"></div>
         <a href="javascript:void(0)" className="w3-bar-item w3-button w3-padding-24 w3-right" onClick="w3_open()"><i className="fa fa-bars"></i></a>
-      </header>
+      </header> -->
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -39,9 +55,14 @@
     -->
     <title>The Container Shop</title>
   </head>
-  <body className="w3-content" style="max-width:1200px">
-    <div clasName="w3-overlay w3-hide-large" onClick="w3_close()" title="close side menu" id="myOverlay"></div>
-    <div className="w3-main" style="margin-left:250px">
+  <body class="body" style="
+    width: 1400px; 
+    margin-right: 500px;
+    background-image: url('https://i.imgur.com/n3e2pvh.jpg');
+    color: azure;
+     ">
+    <div className="w3-overlay w3-hide-large" onClick="w3_close()" title="close side menu" id="myOverlay"></div>
+    <div className="w3-main" style="margin-left:70px;">
     <div className="w3-hide-large" style="margin-top:83px"></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
