adds more styling and cleans up code

--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,8 @@
     width: 1400px; 
     margin-right: 500px;
     background-image: url('https://i.imgur.com/n3e2pvh.jpg');
+    background-size: cover;
+    position: absolute;
     color: azure;
      ">
     <div className="w3-overlay w3-hide-large" onClick="w3_close()" title="close side menu" id="myOverlay"></div>
